--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^2.17.0
   path_provider: ^2.0.5
   firebase_auth: ^4.10.1
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
