--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   path_provider: ^2.0.5
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.9.3
+  firebase_storage: ^11.3.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
